# scansutra-oc

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
app/: config.py  job_manager.py  logger.py  main.py  ocr_engine.py  pdf_utils.py  preprocessing.py  routes.py  tasks.py
app/static/: index.html
